web/viewer.css
/* ... */
.toolbarButton {
  width: 33px;
  height: 33px;
  cursor: pointer;
  color: var(--button-color);
  transition-property: background-color;
  transition-duration: var(--sidebar-transition-duration);
  transition-timing-function: var(--sidebar-transition-timing-function);

  &.labeled {
    border-radius: 0;
    display: inline-block;
    height: auto;
    margin: 0;
    padding: 0 0 1px;
    padding-inline-start: 36px;
    position: relative;
    min-height: 26px;
    min-width: 100%;
    text-align: start;
    white-space: normal;
    width: auto;

    &:is(a) {
      padding-top: 5px;
      text-decoration: none;

      &[href="#"] {
        opacity: 0.5;
        pointer-events: none;
      }
    }

    &::before {
      inset-inline-start: 12px;
      opacity: var(--doorhanger-icon-opacity);
      top: 5px;
    }

    &:not(.toggled):is(:hover, :focus-visible) {
      background-color: var(--doorhanger-hover-bg-color);
      color: var(--doorhanger-hover-color);
    }

    > span {
      display: unset;
      padding-inline-end: 4px;
    }
  }
}

#secondaryToolbar {
  background-color: var(--toolbar-bg-color);
  cursor: default;
  font: message-box;
  font-size: 12px;
  height: auto;
  inset-inline-end: 4px;
  line-height: 14px;
  margin: 4px 2px;
  position: absolute;
  text-align: left;
  top: var(--toolbar-height);
  z-index: 30000;

  :is(button, a) {
    width: 100%;
    margin: 0;
    text-align: center;
    font: message-box;
    outline: none;
  }

  #secondaryToolbarButtonContainer {
    max-height: calc(var(--viewer-container-height) - 40px);
  }
}

#findbar {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: var(--toolbar-bg-color);
  cursor: default;
  font: message-box;
  font-size: 12px;
  height: max-content;
  line-height: 14px;
  margin: 4px 2px;
  min-width: 300px;
  padding: 0 4px;
  position: absolute;
  text-align: left;
  top: var(--toolbar-height);
  left: 5px;
  z-index: 30000;

  * {
    float: var(--inline-start);
    position: relative;
  }

  :is(button, input) {
    font: message-box;
    outline: none;
  }

  input {
    &[type="checkbox"] {
      pointer-events: none;

      &:checked + .toolbarLabel {
        background-color: var(--toggled-btn-bg-color) !important;
        color: var(--toggled-btn-color);
      }
    }
  }

  label {
    width: max-content;
    user-select: none;
    transition-property: background-color;
    transition-duration: var(--sidebar-transition-duration);
    transition-timing-function: var(--sidebar-transition-timing-function);
  }

  :is(label:hover, input:focus-visible + label) {
    background-color: var(--button-hover-color);
    color: var(--toggled-btn-color);
  }

  #findbarInputContainer {
    display: flex;
    align-items: center;
    margin-inline-end: 4px;

    #findInput {
      width: 200px;

      /*#if !MOZCENTRAL*/
      &::-webkit-input-placeholder {
        color: rgb(191 191 191);
      }
      /*#endif*/

      &::placeholder {
        font-style: normal;
      }

      &[data-status="notFound"] {
        background-color: rgb(255 102 102);
      }
    }

    #findPrevious::before {
      mask-image: var(--findbarButton-previous-icon);
    }

    #findNext::before {
      mask-image: var(--findbarButton-next-icon);
    }
  }

  #findbarOptionsOneContainer,
  #findbarOptionsTwoContainer {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  #findbarMessageContainer {
    width: max-content;

    #findResultsCount {
      background-color: rgb(217 217 217);
      color: rgb(82 82 82);
      margin: 5px;
      padding: 4px 5px;
      text-align: center;
    }

    #findMsg {
      width: max-content;

      &[data-status="notFound"] {
        font-weight: bold;
      }
    }

    *:empty {
      display: none;
    }
  }

  &.wrapContainers {
    > div {
      clear: both;
    }

    > #findbarMessageContainer {
      height: auto;

      > * {
        clear: both;
      }
    }
  }

  @media all and (max-width: 1250px) {
    & {
      flex-direction: column;
    }
  }
}

@page {
  margin: 0;
}

#printContainer {
  display: none;
}

@media print {
  body {
    background: rgb(0 0 0 / 0) none;
  }
  body[data-pdfjsprinting] #outerContainer {
    display: none;
  }
  body[data-pdfjsprinting] #printContainer {
    display: block;
  }
  #printContainer {
    height: 100%;
  }
  /* wrapper around (scaled) print canvas elements */
  #printContainer > .printedPage {
    page-break-after: always;
    page-break-inside: avoid;

    /* The wrapper always cover the whole page. */
    height: 100%;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  #printContainer > .xfaPrintedPage .xfaPage {
    position: absolute;
  }

  #printContainer > .xfaPrintedPage {
    page-break-after: always;
    page-break-inside: avoid;
    width: 100%;
    height: 100%;
    position: relative;
  }

  #printContainer > .printedPage :is(canvas, img) {
    /* The intrinsic canvas / image size will make sure that we fit the page. */
    max-width: 100%;
    max-height: 100%;

    direction: ltr;
    display: block;
  }
}

.visibleMediumView {
  display: none !important;
}

@media all and (max-width: 840px) {
  #sidebarContainer {
    background-color: var(--sidebar-narrow-bg-color);
  }
  #outerContainer.sidebarOpen #viewerContainer {
    inset-inline-start: 0 !important;
  }
}

@media all and (max-width: 750px) {
  :root {
    --editor-toolbar-base-offset: 40px;
  }
  #outerContainer .hiddenMediumView {
    display: none !important;
  }
  #outerContainer .visibleMediumView {
    display: inherit !important;
  }
  #outerContainer:not(.sidebarOpen) #toolbarViewerMiddle {
    transform: translateX(0);
  }
  #secondaryToolbarToggle {
    display: block;
  }
}

@media all and (max-width: 690px) {
  .hiddenSmallView,
  .hiddenSmallView * {
    display: none !important;
  }
  .toolbarButtonSpacer {
    width: 0;
  }
}
/* ... */

